--- a/src/styles.css
+++ b/src/styles.css
@@ -28,3 +28,7 @@ body, html {
     height: 50px; /* or whatever height you want */
     justify-content: flex-start;
 }
+table {
+    height: 100%;
+    width: 100%;
+}
