--- a/testingstuffwilldeletelater/styles.css
+++ b/testingstuffwilldeletelater/styles.css
@@ -1,89 +1,34 @@
-html, body {
-    background-color: #ECEFF1;
-    font-family: sans-serif;
+body, html {
     height: 100%;
     margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
-
-h1 {
-    font-weight: normal;
-    font-size: 140%;
+.row {
+    display: flex;
+    justify-content: space-between;
+    height: 50vh; /* Take up half the height of the viewport */
 }
-
+.full-width {
+    width: 100%;
+    height: 100%; /* Take up all the height of its parent */
+    max-height: 600px;
+    overflow: auto; /* Add a scrollbar when necessary */
+    background-color: #f0f0f0; /* Light grey background to make it visible */
+}
+.half-width {
+    width: 49%;
+    height: 200px;
+    border: 1px solid black;
+    padding: 10px;
+    overflow: auto;
+}
+.button-row {
+    height: 50px; /* or whatever height you want */
+    justify-content: flex-start;
+}
 table {
     height: 100%;
     width: 100%;
-}
-
-#blocklyArea {
-    height: 99%;
-    /* background: #fc9;
-    text-align: center; */
-}
-
-#pyscriptArea {
-    margin: 1%;
-}
-
-/* These navigation toolbar styles are modified from Google. */
-nav#toolbar {
-    width: 100%;
-    height: 64px;
-    padding: 16px;
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    background: #2BB4CA;
-}
-
-nav#toolbar .title {
-    text-decoration: none;
-    font-weight: bold;
-    color: #fff;
-    margin-right: 8px;
-    line-height: 1.17;
-}
-
-nav#toolbar .subtitle {
-    color: #fff;
-    line-height: 1.17;
-}
-
-.nav_button {
-    border: #fff;
-    background-color: white;
-    font-weight: bold;
-    color: #2BB4CA;
-    padding: 12px 24px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-left: auto;
-    margin-right: 0;
-    cursor: pointer;
-    line-height: 1.17;
-}
-
-.compile_button {
-    margin-left: 1%;
-    /* border: #000000;
-    background-color: #e4e4e4;
-    color: #000000;
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    margin-left: 10;
-    margin-bottom: 0;
-    margin-right: 10;
-    margin-top: 0;
-    cursor: pointer; */
-}
-
-.debug_button {
-    float: right;
-    margin-left: auto;
-    margin-right: 1.3%;
 }
